# dsp-discoveryf4-rust

./: .gitignore  Cargo.toml  readme.md
Lab0/: Cargo.toml
lab0/: .embed.toml  Cargo.toml  memory.x
lab0/.cargo/: config
lab0/examples/: cycle_count.rs  cyclecount.rs  first.rs  magic_wand.rs  micro_speech.rs  roulette.rs  rtt.rs
lab1/: Cargo.toml  memory.x  openocd.gdb
lab1/examples/: accel.rs  accelerometer_usage_i.rs  accelerometer_usage_ii.rs
lab2/: .embed.toml  Cargo.toml  build.rs
lab2-native/: Cargo.toml
lab2-native/examples/: 2_10_sample_based_systems.rs  2_11_frame_based_systems.rs  2_11_iterator_based_systems.rs  2_12.rs  2_14_direct_fir_filtering.rs  2_14_heapless_direct_fir_filtering.rs  2_1_basic_signals.rs  2_2.rs  2_23_direct_iir_filtering.rs  2_4_operating_on_signals.rs  2_5.rs  2_6.rs  2_7_periodic_signals.rs  2_8.rs  2_9.rs  basic_signals.rs  both.rs  frame_based_systems.rs
lab2-native/src/: lib.rs  main.rs
lab2/examples/: 2_11_frame_based_systems.rs  2_11_heapless_frame_based_systems.rs  2_14_direct_fir_filtering.rs  2_16_direct_fir_filtering.rs  2_17_cmsis_fir_filtering.rs  2_19_cmsis_fir_filtering.rs  2_1_basic_signals.rs  2_1_heapless_basic_signals.rs  2_20_cmsis_convolution.rs  2_22_cmsis_convolution.rs  2_23_direct_iir_filtering.rs  2_25_direct_iir_filtering.rs  2_4_operating_on_signals.rs  2_7_periodic_signals.rs  2_9.rs  basic_signals.rs  basicsignals.rs  direct_fir_filtering.rs  direct_iir_filtering.rs  frame_based_systems.rs  heapless_basic_signals.rs  heapless_frame_based_systems.rs  operating_on_signals.rs  operatingonsignals.rs  periodic_signals.rs
lab2/examples/utils/: mod.rs
lab4/: Cargo.toml  build.rs
lab4-native/: Cargo.toml
lab4-native/examples/: 4_10_stft_calculations.rs  4_10_stft_calculations_matrix.rs  4_13_fif_calculations.rs  4_14_linear_phase_calculations.rs  4_15_linear_phase_calculations.rs  4_1_dft_calculations.rs  4_8_dtfse_calculations.rs  4_9.rs
lab4-native/src/: lib.rs
lab4/examples/: 4_11_stft_accelerometer.rs  4_11_stft_accelerometer_microfft.rs  4_13_FiF_calculations.rs  4_13_fif_calculations.rs  4_13_fif_calculations_microfft.rs  4_1_dft_calculations.rs  4_3_dft_calculations.rs  4_5_fft_calculations.rs  4_5_fft_calculations_microfft.rs  4_6_fft_accelerometer.rs  4_6_fft_accelerometer_microfft.rs  4_8_dtfse_calculations.rs  4_8_dtfse_calculations_microfft.rs  arm_math.rs  dftse_calculations.rs  dtf_calculations.rs
lab5/: .embed.toml  Cargo.toml
lab5/.cargo/: config
lab5/examples/: 5_1_sampling_initial_setup.rs  5_3_analog_signal_generation.rs  5_6_tone_generation.rs
panic_break/: Cargo.toml
panic_break/src/: lib.rs
