[package]
name = "lab1"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
panic-halt = "0.2.0"
lis302dl = "0.1.0"
accelerometer = "0.11.0"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
rtt-target = { version = "0.2.0", features = ["cortex-m"] }

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"

# for cargo flash
[package.metadata]
chip = "STM32F407VGTx"
