[package]
name = "lab2"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
panic-halt = "0.2.0"
itertools = { version = "0.9.0", default-features = false }
micromath = "1.0.0"
panic_rtt = "0.3.0"
jlink_rtt = "0.2.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.3"
