[package]
name = "lab4"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
textplots = "0.6.0"
heapless = { version = "0.7.7" }
itertools = { version = "0.10.0", default-features = false }
microfft = "0.4.0"
image = "0.23.5"
smart-leds = "0.3.0"
plotly = "0.6.0"
