[package]
name = "lab4"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
stm32f4xx-hal = { version = "0.8.1", features = ["stm32f407", "rt"] }
panic-halt = "0.2.0"
micromath = "1.0.1"
microfft = "0.3.0"
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic_break = { path = "../panic_break" }
itertools = { version = "0.9.0", default-features = false }
heapless = "0.5.5"
typenum = "1.12.0"
lis302dl = "0.1.0"
accelerometer = "0.11.0"
cty = "0.2.1"
cmsis-dsp-sys = "0.2.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "=0.2.3"

# for cargo flash
[package.metadata]
chip = "STM32F407VGTx"

[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = false

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
