[package]
name = "lab5"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
micromath = "1.0.1"
microfft = "0.3.0"
jlink_rtt = "0.2.0"
panic_rtt = "0.3.0"
itertools = { version = "0.9.0", default-features = false }
heapless = "0.5.5"
typenum = "1.12.0"
lis302dl = "0.1.0"
accelerometer = "0.11.0"
cs43l22 = { version = "0.1.0", git = "https://github.com/maxekman/cs43l22" }
nb = "0.1.2"

[dependencies.stm32f4xx-hal]
# git = "https://github.com/jacobrosenthal/stm32f4xx-hal/"
# branch = "i2s-update"
features = ["stm32f407", "rt"]
version = "0.8.1"
path = "../../stm32f4xx-hal"

[dependencies.embedded-hal]
# version = "0.2.3"
# TODO: Update version when I2S proposal is finalized:
# https://github.com/rust-embedded/embedded-hal/pull/204
git = "https://github.com/eldruin/embedded-hal/"
branch = "i2s"

[profile.dev]
codegen-units = 1
debug = 1
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z' # !
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
